--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
 # Flask
-Flask
+Flask==0.10.1
 
 # Flask extensions
-Flask-User
-Flask-Babel
-Flask-Login
-Flask-Mail
-Flask-SQLAlchemy
-Flask-WTF
+Flask-Babel==0.9
+Flask-Login==0.2.9
+Flask-Mail==0.9.0
+Flask-SQLAlchemy==1.0
+Flask-WTF==0.9.4
 
 # Python packages
-passlib
-bcrypt
+passlib==1.6.5
+bcrypt==2.0.0
 pycryptodome==3.4.3
-speaklater
-
+speaklater==1.3
